<resources>
    <string name="app_name">哈师大实习管理系统</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string-array name="身份选择">
        <item>学生</item>
        <item>指导老师</item>
        <item>辅导员</item>
        <item>校级管理员</item>
        <item>院级管理员</item>
    </string-array>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="qmf_applytr">申请优秀实习生</string>
    <string name="qmf_applyname">申请人</string>
    <string name="qmf_applyreason">申请理由</string>
    <string name="qmf_applyachieve">成就</string>
    <string name="title_activity_qxx__write">Qxx_WriteActivity</string>
    <string name="title_activity_qxx__reply">Qxx_ReplyActivity</string>
    <string name="title_activity_counsellor">欢迎使用辅导员端</string>
    <string name="title_activity_Qxx_LeaveActivity">给学生留言</string>
    <string name="title_activity_SchoolActivity">欢迎使用学校端</string>
    <string name="title_activity_TutorActivity">欢迎使用指导老师端</string>
    <string name="title_activity_login">Sign in</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="opt_hideLogin">隐身登录</string>
    <string name="opt_silent">静音登录</string>
    <string name="opt_openVibra">开启振动</string>
    <string name="opt_acceptGroupMsg">接收群消息</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>




