<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">


    <RelativeLayout
        android:background="@drawable/background_login_div_bg"
        android:id="@+id/login_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="100dp"

        android:padding="15dip">
        <!-- 账号 -->
        <TextView
            android:id="@+id/login_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:hint="请输入学号"
            android:singleLine="true" />
        <!-- 密码 text -->
        <TextView
            android:textSize="20dp"
            android:id="@+id/login_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_password"
            android:textColor="#ffffff" />

        <EditText
            android:hint="请输入密码"
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:singleLine="true" />
        <!-- 登录button -->
        <Button
            android:id="@+id/wqj_stu_log_button"
            android:onClick="stu_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/password_edit"
            android:layout_below="@id/password_edit"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/login_label_signin" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/miniTwitter_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/cat" />

    </RelativeLayout>

</LinearLayout>
