<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#F2F2F2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:background="#d5e9fd"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/qmf_applyreturn"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_marginRight="50dip"
            android:background="#d5e9fd"
            android:layout_marginTop="7px"
            android:onClick="qmf_ApplyReturnS"
            android:src="@drawable/qmf_return" />

        <TextView
            android:layout_width="0dip"
            android:layout_weight="2"
            android:layout_marginTop="4dip"
            android:background="#d5e9fd"
            android:text="申请单"
            android:textColor="#000"
            android:layout_height="fill_parent"
            android:textSize="20dip"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/qmf_applyname"
            android:layout_marginLeft="40dip"
            android:textSize="20dip"
            android:textColor="#000000" />


        <EditText
            android:id="@+id/qmf_applyname"
            android:layout_width="0dip"
            android:layout_weight="7"
            android:layout_height="40dip"
            android:layout_marginRight="30dip"

            android:inputType="textPersonName">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="8"
        android:layout_marginTop="10dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qmf_applyreason"
            android:layout_marginLeft="40dip"
            android:textSize="20dip"
            android:textColor="#000000" />


        <EditText
            android:id="@+id/qmf_applyreason"
            android:layout_width="fill_parent"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="5dip"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="top"

            android:inputType="textMultiLine"
            android:minLines="5"
            android:scrollbars="vertical"
            android:hint="请输入申请理由！"
            android:background="@android:drawable/edit_text"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="5"
        android:layout_marginTop="10dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:text="申请时间"
            android:textColor="#000000"
            android:layout_marginLeft="40dip"
            android:textSize="20dip" />

        <EditText
            android:id="@+id/qmf_applytime"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="2"
            android:layout_marginRight="30dip"
            android:hint="请点击选择时间！"

            android:layout_marginLeft="40dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="8"
        android:layout_marginTop="10dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qmf_applyachieve"
            android:layout_marginLeft="40dip"
            android:textColor="#000000"
            android:textSize="20dip" />


        <EditText
            android:id="@+id/qmf_applyachieve"
            android:layout_width="fill_parent"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="5dip"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:scrollbars="vertical"
            android:hint="请输入您的成就！"
            android:background="@android:drawable/edit_text"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:layout_marginTop="10dip"
        android:orientation="vertical">

        <Button
            android:id="@+id/qmf_applyrefer"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="提交"
            android:textSize="20dip"
            android:onClick="qmf_Applyrefer"
            android:textColor="#000"
            android:background="#d5e9fd" />
    </LinearLayout>
</LinearLayout>